#Resolve headers, refs and linkage
set(TH_USE_ZLIB ON CACHE BOOL "Enable ZLib")
if (TH_USE_ZLIB)
	find_path(ZLIB_LOCATION zlib.h)
	if (ZLIB_LOCATION)
		target_include_directories(tomahawk PRIVATE ${ZLIB_LOCATION})
		find_package(ZLIB QUIET)
		if (NOT ZLIB_FOUND)
			find_library(ZLIB_FOUND "zlib")
			if (ZLIB_FOUND)
				set(ZLIB_LIBRARIES "${ZLIB_FOUND}")
				target_compile_definitions(tomahawk PRIVATE -DTH_HAS_ZLIB)
			endif()
		else()
			target_compile_definitions(tomahawk PRIVATE -DTH_HAS_ZLIB)
		endif()
		if (ZLIB_FOUND OR ZLIB_LIBRARIES)
			if (DEFINED ZLIB_LIBRARIES)
				string(STRIP "${ZLIB_LIBRARIES}" ZLIB_LIBRARIES)
				target_link_libraries(tomahawk PRIVATE ${ZLIB_LIBRARIES})
				message(STATUS "ZLib library found")
			else()
				target_link_libraries(tomahawk PRIVATE ZLIB::ZLIB)
				message(STATUS "ZLib target library found")
			endif()
		else()
			message("ZLib library was not found")
		endif()
	else()
		message("ZLib library was not found")
	endif()
endif()

#Cleanup
unset(ZLIB_LOCATION CACHE)
unset(ZLIB_FOUND CACHE)
unset(ZLIB_LIBRARIES CACHE)