#Resolve headers, refs and linkage
find_path(SDL2_LOCATION SDL2/SDL.h)
if (SDL2_LOCATION)
    target_include_directories(tomahawk PRIVATE ${SDL2_LOCATION})
    find_package(SDL2 CONFIG QUIET)
    if (NOT SDL2_FOUND)
        find_library(SDL2_FOUND "SDL2")
        if (SDL2_FOUND)
            set(SDL2_LIBRARIES "${SDL2_FOUND}")
            target_compile_definitions(tomahawk PRIVATE -DTHAWK_HAS_SDL2)
        endif()
    else()
        target_compile_definitions(tomahawk PRIVATE -DTHAWK_HAS_SDL2)
    endif()
    if (SDL2_FOUND OR SDL2_LIBRARIES)
        if (DEFINED SDL2_LIBRARIES)
            string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)
            target_link_libraries(tomahawk PRIVATE ${SDL2_LIBRARIES})
            message(STATUS "SDL2 library found")
        else()
            target_link_libraries(tomahawk PRIVATE SDL2::SDL2)
            message(STATUS "SDL2 target library found")
        endif()
    else()
        message(WARNING "SDL2 library was not found")
    endif()
else()
    message(WARNING "SDL2 library was not found")
endif()

#Cleanup
unset(SDL2_LOCATION CACHE)
unset(SDL2_FOUND CACHE)
unset(SDL2_LIBRARIES CACHE)